--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,8 @@ services:
     name: motor-qr-system
     runtime: python
     plan: free
-    buildCommand: bash build.sh
+    buildCommand: bash deploy.sh
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
-      - key: PYTHONUNBUFFERED
-        value: true
