--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-# Core dependencies
-fastapi==0.104.1
-uvicorn==0.24.0
+# Minimal requirements for deployment
+fastapi==0.95.2
+uvicorn==0.22.0
 python-multipart==0.0.6
 jinja2==3.1.2
-qrcode==7.4.2
-pillow==9.0.1
-pandas==1.3.5
-openpyxl==3.0.10
+# QR code functionality excluded for deployment - we'll generate QR codes locally
