Improve security by using environment variables for sensitive information

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: motor-qr-system
     runtime: python
     plan: free
-    buildCommand: bash deploy.sh
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
+      - key: MOTOR_ADMIN_PASSWORD
+        value: "admin123"  # Change this to a secure password in the Render dashboard
