--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# Minimal requirements for deployment
+# Core requirements
 fastapi==0.95.2
 uvicorn==0.22.0
 python-multipart==0.0.6
 jinja2==3.1.2
-# QR code functionality excluded for deployment - we'll generate QR codes locally
