--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: motor-qr-system
     runtime: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt --no-cache-dir
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
